RESOLVED FIXED203010
[LFC][TFC] TableFormattingContext::distributeExtraHorizontalSpace should not ignore fixed width columns
https://bugs.webkit.org/show_bug.cgi?id=203010
Summary [LFC][TFC] TableFormattingContext::distributeExtraHorizontalSpace should not ...
alan
Reported 2019-10-15 15:10:54 PDT
They don't participate in extra space distribution.
Attachments
Patch (8.25 KB, patch)
2019-10-15 15:16 PDT, alan
no flags
alan
Comment 1 2019-10-15 15:16:32 PDT
Radar WebKit Bug Importer
Comment 2 2019-10-15 22:19:55 PDT
WebKit Commit Bot
Comment 3 2019-10-16 06:27:26 PDT
Comment on attachment 381029 [details] Patch Clearing flags on attachment: 381029 Committed r251186: <https://trac.webkit.org/changeset/251186>
WebKit Commit Bot
Comment 4 2019-10-16 06:27:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.