Source/WebCore/layout/tableformatting/TableFormattingContext.cpp
@@ -279,12 +279,13 @@ LayoutUnit TableFormattingContext::computedTableWidth()
     auto& grid = formattingState().tableGrid();
     auto& columnsContext = grid.columnsContext();
     auto tableWidthConstraints = grid.widthConstraints();
+    auto totalHorizontalSpacing = grid.totalHorizontalSpacing();
 
     auto width = geometry().computedValueIfNotAuto(style.width(), containingBlockWidth);
     LayoutUnit usedWidth;
     if (width) {
         if (*width > tableWidthConstraints.minimum) {
-            distributeAvailableWidth(*width - tableWidthConstraints.minimum);
+            distributeExtraHorizontalSpace(*width - totalHorizontalSpacing, tableWidthConstraints.minimum - totalHorizontalSpacing);
             usedWidth = *width;
         } else {
             usedWidth = tableWidthConstraints.minimum;
@@ -299,7 +300,7 @@ LayoutUnit TableFormattingContext::computedTableWidth()
             useAsContentLogicalWidth(WidthConstraintsType::Maximum);
         } else {
             usedWidth = containingBlockWidth;
-            distributeAvailableWidth(*width - tableWidthConstraints.minimum);
+            distributeExtraHorizontalSpace(usedWidth - totalHorizontalSpacing, tableWidthConstraints.minimum - totalHorizontalSpacing);
         }
     }
     // FIXME: This should also deal with collapsing borders etc.
@@ -312,15 +313,36 @@ LayoutUnit TableFormattingContext::computedTableWidth()
     return usedWidth;
 }
 
-void TableFormattingContext::distributeAvailableWidth(LayoutUnit extraHorizontalSpace)
+void TableFormattingContext::distributeExtraHorizontalSpace(LayoutUnit availableContentWidth, LayoutUnit tableMinimumContentWidth)
 {
-    // FIXME: Right now just distribute the extra space equaly among the columns.
-    auto& columns = formattingState().tableGrid().columnsContext().columns();
+    ASSERT(availableContentWidth >= tableMinimumContentWidth);
+    auto& grid = formattingState().tableGrid();
+    auto& columns = grid.columnsContext().columns();
     ASSERT(!columns.isEmpty());
 
-    auto columnExtraSpace = extraHorizontalSpace / columns.size();
-    for (auto& column : columns)
+    auto extraHorizontalSpace = availableContentWidth - tableMinimumContentWidth;
+    auto adjustabledHorizontalSpace = tableMinimumContentWidth;
+    auto numberOfColumns = columns.size();
+    // Fixed width columns don't participate in available space distribution.
+    for (auto& column : columns) {
+        if (!column.hasFixedWidth())
+            continue;
+        auto columnFixedWidth = *column.columnBox()->columnWidth();
+        column.setLogicalWidth(columnFixedWidth);
+
+        --numberOfColumns;
+        adjustabledHorizontalSpace -= columnFixedWidth;
+    }
+    if (!numberOfColumns || !adjustabledHorizontalSpace)
+        return;
+    // FIXME: Right now just distribute the extra space equaly among the columns using the minimum width.
+    ASSERT(adjustabledHorizontalSpace > 0);
+    for (auto& column : columns) {
+        if (column.hasFixedWidth())
+            continue;
+        auto columnExtraSpace = extraHorizontalSpace / adjustabledHorizontalSpace * column.widthConstraints().minimum;
         column.setLogicalWidth(column.widthConstraints().minimum + columnExtraSpace);
+    }
 }
 
 void TableFormattingContext::useAsContentLogicalWidth(WidthConstraintsType type)
